--- a/style.css
+++ b/style.css
@@ -26,4 +26,7 @@ button {
   border-radius: 10px;
   border: none;
   cursor: pointer;
+  display: block;
+  margin: 0 auto;
+  margin-top: 10px;
 }
