--- a/style.css
+++ b/style.css
@@ -9,24 +9,35 @@ body {
 
 h1 {
   color: goldenrod;
-  font-size: 80px;
+  font-size: 70px;
 }
 
 p {
-  font-size: 50px;
+  font-size: 30px;
   color: white;
 }
 
 button {
-  width: 200px;
+  width: 300px;
   background-color: goldenrod;
   color: #016f32;
-  height: 100px;
-  font-size: 40px;
+  height: 80px;
+  font-size: 30px;
   border-radius: 10px;
   border: none;
   cursor: pointer;
   display: block;
   margin: 0 auto;
   margin-top: 10px;
+}
+
+.app-wrapper {
+  background-color: #21825c;
+  width: 500px;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px 10px;
 }
