--- a/style.css
+++ b/style.css
@@ -31,13 +31,76 @@ button {
   margin-top: 10px;
 }
 
-.app-wrapper {
-  background-color: #21825c;
+.small-wrapper {
   width: 500px;
-  border-radius: 5px;
+  position: relative;
+  top: 700px;
+  left: 500px;
+}
+
+small {
+  color: yellow;
+  font-size: 14px;
+  border: 1px solid;
+  background-color: #21825c;
+  margin-top: 10px;
+}
+
+small a {
+  color: goldenrod;
+}
+.app-wrapper {
+  width: 500px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 10px 10px;
+  margin: 0 auto;
+}
+
+.app-game {
+  background-color: #21825c;
+  border-radius: 5px;
+  height: 630px;
+  padding-top: 10px;
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 40px;
+  }
+
+  .app-game {
+    width: 260px;
+    margin-left: 45px;
+    position: relative;
+    top: -150px;
+    height: 450px;
+    padding-top: 10px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+  button {
+    width: 200px;
+    height: 60px;
+    font-size: 20px;
+    border-radius: 10px;
+    margin-top: 10px;
+  }
+
+  .small-wrapper {
+    width: 230px;
+    position: relative;
+    top: 550px;
+    left: 15px;
+    font-size: 10px;
+  }
+
+  small {
+    font-size: 10px;
+    margin-top: 10px 10px;
+  }
 }
